1st project done

--- a/projects/little taco shop project/index.html
+++ b/projects/little taco shop project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = 'PT-BR'>
     <head>
         <title>The Little Taco Shop</title>
         <meta name = 'author' content = 'Cauã'>
@@ -7,32 +7,38 @@
         <meta charset = 'UTF-8'>
         <link rel = 'icon' href = 'favicon.ico'>
         <link rel = 'stylesheet' href = 'css/style.css'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DynaPuff&family=Rubik+Marker+Hatch&family=Rubik+Vinyl&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <header>  
-            <h1>Welcome to The Little Taco Shop</h1>
-            <nav aria-label="navigation-area">
+            <h1 class = 'titles'>Welcome to The Little Taco Shop</h1>
+            <nav aria-label="navigation-area" class = 'navigation-area'>
                 <ul>
-                    <li>
+                    <li class = 'nav-option'>
                         <a href="#about">About <abbr title="Little Taco Shop">LTS</abbr></a>
                     </li>
-                    <li>
+                    <li class = 'nav-option'>
                         <a href="#menu">Our Menu</a>
                     </li>
-                    <li>
+                    <li class = 'nav-option'>
                         <a href="hours.html">Store Hours</a>
                     </li>
-                    <li>
+                    <li class = 'nav-option'>
                         <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </nav>
         </header>
 
-        <figure>
-            <img src="img/tacos_and_drink_400x267.png" alt="Tacos and a Drink" title = 'Tacos and a Drink' width="400" height="267" loading="lazy">
-            <figcaption>Tacos and a Drink</figcaption>
+        <figure class = 'imagecaption'>
+            <img src="img/tacos_and_drink_400x267.png" alt="Tacos and a Drink" title = 'Tacos and a Drink' width="400" height="267" loading="lazy" class = 'image'>
+            <figcaption class = 'figcaption'>Tacos and a Drink</figcaption>
         </figure>
 
         <hr>
