--- a/scripts CSS/css-course-content-master/challenge/html/index.html
+++ b/scripts CSS/css-course-content-master/challenge/html/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Roboto+Condensed:400,700" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Andika&family=Prata&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<title>Website Styling Challenge</title>
 </head>
@@ -32,7 +34,7 @@
 
 		<div class="para-1">
 			<h2 class="subtitle">Subtitle 1</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			<p id = 'subtitle-text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 			consequat.</p>
 			<img src="../img/img-1.jpg" id="image-1">
 		</div>
@@ -56,15 +58,15 @@
 		</div>
 
 		<div class="image-grid">
-			<img src="../img/img-2.jpg">
-			<img src="../img/img-3.jpg">
-			<img src="../img/img-4.jpg">
-			<img src="../img/img-5.jpg">
-			<img src="../img/img-6.jpg">
-			<img src="../img/img-7.jpg">
-			<img src="../img/img-8.jpg">
-			<img src="../img/img-9.jpg">
-			<img src="../img/img-10.jpg">
+			<img src="../img/img-2.jpg" class = 'grid-item'>
+			<img src="../img/img-3.jpg" class = 'grid-item'>
+			<img src="../img/img-4.jpg" class = 'grid-item'>
+			<img src="../img/img-5.jpg" class = 'grid-item'>
+			<img src="../img/img-6.jpg" class = 'grid-item'>
+			<img src="../img/img-7.jpg" class = 'grid-item'>
+			<img src="../img/img-8.jpg" class = 'grid-item'>
+			<img src="../img/img-9.jpg" class = 'grid-item'>
+			<img src="../img/img-10.jpg" class = 'grid-item'>
 		</div>
 	</div>
 
