--- a/projects/recipes website/html-css-simply-recipes-main/starter/contact.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/contact.html
@@ -18,7 +18,43 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-   <h1>Contact Page</h1>
+    <!--nav-bar-->
+    <nav class="nav-bar">
+      <!--nav-box(all navigation-area box)-->
+      <div class="nav-box">
+      <!--nav-header-(logo)-->
+        <div class="nav-header"> 
+        <!--header-->
+          <a href="index.html">
+            <img src="/assets/logo.svg" alt="simply-recipes" width="240" height="44" loading="lazy" id = 'nav-logo'>
+          </a>
+          <!--extend-button-->
+          <button class = 'btn nav-btn'>
+            <i class="fas fa-align-justify"></i>
+          </button>
+        </div>
+        <!--list of links-->
+        <div class = 'nav-links'>
+          <a href="index.html" class = 'nav-link'>Home</a>
+          <a href="about.html" class = 'nav-link'>About</a>
+          <a href="tags.html" class = 'nav-link'>Tags</a>
+          <a href="recipes.html" class = 'nav-link'>Recipes</a>
+          <div class="nav-link contact-link">
+            <a href="contact.html" class = 'btn'>Contact</a>
+          </div>
+      </div>
+    </nav>
+    <!--end-of-nav-->
+    <!--main-->
+    <main class="page">
+
+    </main>
+    <!--end-of-main-->
+    <!--footer-->
+    <footer class="page-footer">
+      <p>&copy; <span id = 'date'>2023 </span> <a href="index.html" id = 'footer-logo'>SimplyRecipes</a> Built by Cauã Braga </p>
+    </footer>
+    <script src = '/js/app.js'></script>
     
   </body>
 </html>
