recipes project done ;)

--- a/projects/recipes website/html-css-simply-recipes-main/starter/404.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/404.html
@@ -46,8 +46,9 @@
     </nav>
     <!--end-of-nav-->
     <!--main-->
-    <main class="page">
-
+    <main class="page error-page">
+      <h2>404</h2>
+      <h3>page not found</h3>
     </main>
     <!--end-of-main-->
     <!--footer-->
