--- a/projects/recipes website/html-css-simply-recipes-main/starter/about.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/about.html
@@ -47,7 +47,39 @@
     <!--end-of-nav-->
     <!--main-->
     <main class="page">
-
+      <section class="about-page">
+        <article>
+          <h2>Welcome to the Simply Recipes official website!</h2>
+          <p>Here, our goal is to make easy the learning of how to make some delicious recipes, going from healthy meals to yummy desserts.</p>
+          <p>Feel free to scroll through the recipes and choose one to try. It will definitely rejoice your day! </p>
+          <a href="/contact.html" class = 'btn'>Contact</a>
+        </article>
+        <img src="/assets/about.jpeg" alt="Pouring Salt" class = "img about-img">
+      </section>
+      <section class="featured-recipes">
+        <h5 class = 'featured-title'>Look At This Awesomesouce!</h5>
+        <div class="recipes-list">
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-1.jpeg" alt="Carne Assada" title = "Carne Assada" class = 'img recipe-img'/>
+            <h3>Carne Assada</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+          <!--end-of-single-recipe-->
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-2.jpeg" alt="Greek Ribs" title = "Greek Ribs" class = 'img recipe-img'/>
+            <h3>Greek Ribs</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+          <!--end-of-single-recipe-->
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-3.jpeg" alt="Vegetable Soup" title = "Vegetable Soup" class = 'img recipe-img'/>
+            <h3>Vegetable Soup</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+      </section>
     </main>
     <!--end-of-main-->
     <!--footer-->
