--- a/projects/recipes website/html-css-simply-recipes-main/starter/index.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/index.html
@@ -76,28 +76,28 @@
           <div class="recipes-list">
             <!--single-recipe-->
             <a href="/single-recipe.html" class = 'recipe'>
-              <img src="/assets/recipes/recipe-1.jpeg" alt="Carne Assada" title = "Carne Assada" class = 'recipe-img'/>
+              <img src="/assets/recipes/recipe-1.jpeg" alt="Carne Assada" title = "Carne Assada" class = 'img recipe-img'/>
               <h3>Carne Assada</h3>
               <p>Prep: 15 min | Cook: 5 min</p>
             </a>
             <!--end-of-single-recipe-->
             <!--single-recipe-->
             <a href="/single-recipe.html" class = 'recipe'>
-              <img src="/assets/recipes/recipe-2.jpeg" alt="Greek Ribs" title = "Greek Ribs" class = 'recipe-img'/>
+              <img src="/assets/recipes/recipe-2.jpeg" alt="Greek Ribs" title = "Greek Ribs" class = 'img recipe-img'/>
               <h3>Greek Ribs</h3>
               <p>Prep: 15 min | Cook: 5 min</p>
             </a>
             <!--end-of-single-recipe-->
             <!--single-recipe-->
             <a href="/single-recipe.html" class = 'recipe'>
-              <img src="/assets/recipes/recipe-3.jpeg" alt="Vegetable Soup" title = "Vegetable Soup" class = 'recipe-img'/>
+              <img src="/assets/recipes/recipe-3.jpeg" alt="Vegetable Soup" title = "Vegetable Soup" class = 'img recipe-img'/>
               <h3>Vegetable Soup</h3>
               <p>Prep: 15 min | Cook: 5 min</p>
             </a>
             <!--end-of-single-recipe-->
             <!--single-recipe-->
             <a href="/single-recipe.html" class = 'recipe'>
-              <img src="/assets/recipes/recipe-4.jpeg" alt="Banana Pancakes" title = "Banana Pancakes" class = 'recipe-img'/>
+              <img src="/assets/recipes/recipe-4.jpeg" alt="Banana Pancakes" title = "Banana Pancakes" class = 'img recipe-img'/>
               <h3>Banana Pancakes</h3>
               <p>Prep: 15 min | Cook: 5 min</p>
             </a>
