--- a/projects/recipes website/html-css-simply-recipes-main/starter/single-recipe.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/single-recipe.html
@@ -47,7 +47,98 @@
     <!--end-of-nav-->
     <!--main-->
     <main class="page">
-
+      <div class="recipe-page">
+        <section class="recipe-hero">
+          <img src="/assets/recipes/recipe-4.jpeg" alt="Banana Pancakes" title = "Banana Pancakes" class = 'img recipe-hero-img'>
+          <article class = 'recipe-info'>
+            <h2>Banana pancakes</h2>
+            <p>This is the perfect opportunity for you to learn how to make banana pancakes. Following this step by step will be a success! A good recipe for banana pancakes is a good choice for those days when you want to eat a quick and cheap breakfast without giving up a different flavor.</p>
+            <p>(Text from <a href="https://www.tudogostoso.com.br/receita/181793-panqueca-de-banana.html">TudoGostoso.com)</a>
+            </p>
+          <!--recipe-icons-->
+          <div class="recipe-icons">
+            <!--single-recipe-icons-->
+            <article>
+              <i class="fas fa-clock"></i>
+              <h5>prep time</h5>
+              <p>30 min</p>
+            </article>
+            <!--end-of-single-recipe-icons-->            
+            <!--single-recipe-icons-->
+            <article>
+              <i class="far fa-clock"></i>
+              <h5>cook time</h5>
+              <p>15 min</p>
+            </article>
+            <!--end-of-single-recipe-icons-->            
+            <!--single-recipe-icons-->
+            <article>
+              <i class="fas fa-user-friends"></i>
+              <h5>servings</h5>
+              <p>6 servings</p>
+            </article>
+            <!--end-of-single-recipe-icons-->    
+          </div>
+          <!--end-of-recipe-icons-->
+          <!--recipe-tags-->
+          <div class="recipe-tags">
+            Tags:
+            <a href="/tag-template.html">beef</a>
+            <a href="/tag-template.html">breakfast</a>
+            <a href="/tag-template.html">carrots</a>
+            <a href="/tag-template.html">dinner</a>
+            <a href="/tag-template.html">food</a>
+          </div>
+          <!--end-of-recipe-tags-->
+          </article>
+        </section>
+        <!--recipe-content-->
+        <section class="recipe-content">
+          <article>
+            <h3>instructions</h3>
+            <!--single-instruction-->
+              <div class="single-instruction">
+                <header><p>step 1</p>
+                <div></div>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            <!--end-of-single-instruction-->
+            <!--single-instruction-->
+              <div class="single-instruction">
+                <header><p>step 2</p>
+                <div></div>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            <!--end-of-single-instruction-->
+            <!--single-instruction-->
+              <div class="single-instruction">
+                <header><p>step 3</p>
+                <div></div>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            <!--end-of-single-instruction-->
+          </article>
+          <article class = 'second-column'>
+            <div>
+              <h3>ingredients</h3>
+              <p class="single-ingredient">1 1/2 pancakes dry cup mix</p>
+              <p class="single-ingredient">1 cup flex seed meal</p>
+              <p class="single-ingredient">1 cup sink milk</p>
+            </div>
+            <div>
+              <h3>tools</h3>
+              <p class = 'single-tool'>Lorem ipsum dolor</p>
+              <p class = 'single-tool'>Lorem ipsum dolor</p>
+              <p class = 'single-tool'>Lorem ipsum dolor</p>
+              <p class = 'single-tool'>Lorem ipsum dolor</p>
+            </div>
+          </article>
+        </section>
+        <!--end-of-recipe-content-->
+      </div>
     </main>
     <!--end-of-main-->
     <!--footer-->
