--- a/projects/recipes website/html-css-simply-recipes-main/starter/recipes.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/recipes.html
@@ -47,7 +47,54 @@
     <!--end-of-nav-->
     <!--main-->
     <main class="page">
+      <section class="recipes-container">
 
+        <!--tag-container-->
+        <div class="tag-container">
+          <h3>recipes</h3>
+          <div class="tags-list">
+            <a href="/tag-template.html">Beef (1)</a>
+            <a href="/tag-template.html">Breakfast (2)</a>
+            <a href="/tag-template.html">Carrots (3)</a>
+            <a href="/tag-template.html">Food (4)</a>
+          </div>
+        </div>
+        <!--end-of-tag-container-->
+
+        <!--recipes-list-->
+        <div class="recipes-list">
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-1.jpeg" alt="Carne Assada" title = "Carne Assada" class = 'img recipe-img'/>
+            <h3>Carne Assada</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+          <!--end-of-single-recipe-->
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-2.jpeg" alt="Greek Ribs" title = "Greek Ribs" class = 'img recipe-img'/>
+            <h3>Greek Ribs</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+          <!--end-of-single-recipe-->
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-3.jpeg" alt="Vegetable Soup" title = "Vegetable Soup" class = 'img recipe-img'/>
+            <h3>Vegetable Soup</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+          <!--end-of-single-recipe-->
+          <!--single-recipe-->
+          <a href="/single-recipe.html" class = 'recipe'>
+            <img src="/assets/recipes/recipe-4.jpeg" alt="Banana Pancakes" title = "Banana Pancakes" class = 'img recipe-img'/>
+            <h3>Banana Pancakes</h3>
+            <p>Prep: 15 min | Cook: 5 min</p>
+          </a>
+          <!--end-of-single-recipe-->
+        </div>
+        <!--end-of-recipes-list-->
+
+      </section>
     </main>
     <!--end-of-main-->
     <!--footer-->
