--- a/projects/recipes website/html-css-simply-recipes-main/starter/tag-template.html
+++ b/projects/recipes website/html-css-simply-recipes-main/starter/tag-template.html
@@ -47,7 +47,39 @@
     <!--end-of-nav-->
     <!--main-->
     <main class="page">
-
+      <div>
+        <h3>Beef</h3>
+      </div>
+      <div class="recipes-list">
+        <!--single-recipe-->
+        <a href="/single-recipe.html" class = 'recipe'>
+          <img src="/assets/recipes/recipe-1.jpeg" alt="Carne Assada" title = "Carne Assada" class = 'img recipe-img'/>
+          <h3>Carne Assada</h3>
+          <p>Prep: 15 min | Cook: 5 min</p>
+        </a>
+        <!--end-of-single-recipe-->
+        <!--single-recipe-->
+        <a href="/single-recipe.html" class = 'recipe'>
+          <img src="/assets/recipes/recipe-2.jpeg" alt="Greek Ribs" title = "Greek Ribs" class = 'img recipe-img'/>
+          <h3>Greek Ribs</h3>
+          <p>Prep: 15 min | Cook: 5 min</p>
+        </a>
+        <!--end-of-single-recipe-->
+        <!--single-recipe-->
+        <a href="/single-recipe.html" class = 'recipe'>
+          <img src="/assets/recipes/recipe-3.jpeg" alt="Vegetable Soup" title = "Vegetable Soup" class = 'img recipe-img'/>
+          <h3>Vegetable Soup</h3>
+          <p>Prep: 15 min | Cook: 5 min</p>
+        </a>
+        <!--end-of-single-recipe-->
+        <!--single-recipe-->
+        <a href="/single-recipe.html" class = 'recipe'>
+          <img src="/assets/recipes/recipe-4.jpeg" alt="Banana Pancakes" title = "Banana Pancakes" class = 'img recipe-img'/>
+          <h3>Banana Pancakes</h3>
+          <p>Prep: 15 min | Cook: 5 min</p>
+        </a>
+        <!--end-of-single-recipe-->
+      </div>
     </main>
     <!--end-of-main-->
     <!--footer-->
